objects/Fielo_SegmentManagerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>F_AddAll__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Toggle the &quot;AddAll&quot; button on/off.</inlineHelpText>
        <label>Display Add-All Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_BtnLocation__c</fullName>
        <defaultValue>&quot;both&quot;</defaultValue>
        <inlineHelpText>Location of the page buttons. Allowed values are &quot;top&quot;, &quot;bottom&quot; and &quot;both&quot;.</inlineHelpText>
        <label>Buttons Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_FieldLike__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <inlineHelpText>Comma-separated field names whose values will be compared to the search input.</inlineHelpText>
        <label>Search Fields</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Fieldset__c</fullName>
        <inlineHelpText>Name of the segment fieldset, used to generate the columns of the tables.</inlineHelpText>
        <label>Fieldset</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_HomeURL__c</fullName>
        <inlineHelpText>The base URL from salesforce, needed when accessing the manager from a visualforce page</inlineHelpText>
        <label>Home URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Messages__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Toggle visualforce messages on/off. Note: this will only affect warning/confirm messages.</inlineHelpText>
        <label>Display Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_MsgLocation__c</fullName>
        <defaultValue>&quot;top&quot;</defaultValue>
        <inlineHelpText>Location of the page messages. Allowed values are &quot;top&quot;, &quot;bottom&quot; and &quot;both&quot;.</inlineHelpText>
        <label>Messages Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_OrderBy__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <inlineHelpText>Name of the field used to order the results of a search query.</inlineHelpText>
        <label>Order Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PageIndexes__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Display page numbers in addition to the previous/next buttons.</inlineHelpText>
        <label>Display Page Numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PagerSize__c</fullName>
        <inlineHelpText>The amount of rows to display on a search result.</inlineHelpText>
        <label>Search Result Length</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fielo Segment Manager Settings</label>
</CustomObject>